# lxplug-ejecter

./: README  configure.ac  meson.build
debian/: changelog  control  copyright  lxplug-ejecter.install  wfplug-ejecter.install
plugins/: Makefile.am  Makefile.in
plugins/ejecter/: ejecter.c
po/: POTFILES.in  en_GB.po  hy.po  is.po  it.po  ja.po  ko.po  meson.build  sk.po
src/: ejecter.c  ejecter.cpp  ejecter.h  ejecter.hpp  meson.build
